[package]
name = "npm_pkg"
version = "0.1.0"
edition = "2021"
description = "Get npm package info"
homepage = "https://github.com/Chersquwn/npm_pkg"
repository = "https://github.com/Chersquwn/npm_pkg"
authors = ["Chersquwn <chersquwn@gmail.com>"]
license = "MIT"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
validate_npm_package_name = "0.1.0"
